app/src/main/java/com/example/httperrorhandling/network/errors/ErrorHandler.kt
package com.example.httperrorhandling.network.errors

interface ErrorHandler {

    fun handleError(error: Throwable)
}